--- a/src/home.html
+++ b/src/home.html
@@ -7,9 +7,9 @@
     <div class="block"></div>
     <!--#include virtual="/templates/_line_notice.html" -->
     <div class="wrapper">
-        <div class="content">
+        <main class="content">
 
-        </div>
+        </main>
         <!--#include virtual="/templates/_footer.html" -->
     </div>
     <!--#include virtual="/templates/_main_menu_mobile.html" -->
