header + настройка проекта

--- a/src/home.html
+++ b/src/home.html
@@ -4,15 +4,13 @@
 <!--#include virtual="/templates/_head.html" -->
 
 <body>
-    <div class="block"></div>
-    <!--#include virtual="/templates/_line_notice.html" -->
     <div class="wrapper">
+        <!--#include virtual="/templates/_header.html" -->
         <main class="content">
 
         </main>
         <!--#include virtual="/templates/_footer.html" -->
     </div>
-    <!--#include virtual="/templates/_main_menu_mobile.html" -->
     <!--#include virtual="/templates/_scripts.html" -->
 </body>
 
